--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint --fix --ext .jsx,.js src/"
   },
   "browserslist": {
     "production": [
