--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,10 @@
     "@types/node": "^18.8.3",
     "@types/sqlite3": "^3.1.8",
     "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "dotenv": "^16.0.3",
+    "eslint": "^8.25.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
