--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/yamljs": "^0.2.31",
     "ajv": "^8.11.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -18,7 +19,8 @@
     "express-pino-logger": "^7.0.0",
     "lodash.omit": "^4.5.0",
     "sqlite3": "^5.1.2",
-    "swagger-ui-express": "^4.5.0"
+    "swagger-ui-express": "^4.5.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/ajv": "^1.0.0",
