--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "yarn init_db && nodemon --esm --experimental-specifier-resolution=node src/index.ts",
-    "init_db": "ts-node --esm --experimental-specifier-resolution=node ./src/database/init"
+    "init_db": "ts-node --esm --experimental-specifier-resolution=node ./src/database/init",
+    "lint": "eslint"
   },
   "author": "",
   "license": "ISC",
