--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "yarn init_db && nodemon --esm --experimental-specifier-resolution=node src/index.ts",
+    "start": "yarn init_db && yarn generate_jwt_token && nodemon --esm --experimental-specifier-resolution=node src/index.ts",
+    "generate_jwt_token": "ts-node --esm --experimental-specifier-resolution=node scripts/generateJwtTokenSecret",
     "init_db": "ts-node --esm --experimental-specifier-resolution=node ./src/database/init",
     "lint": "eslint"
   },
@@ -15,9 +16,11 @@
     "@types/yamljs": "^0.2.31",
     "ajv": "^8.11.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.1",
     "express-ipfilter": "^1.3.1",
     "express-pino-logger": "^7.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash.omit": "^4.5.0",
     "sqlite3": "^5.1.2",
     "swagger-ui-express": "^4.5.0",
