--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.5",
+    "antd-mobile": "^5.24.2",
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
     "framer-motion": "^7.6.1",
