fix(server): fix typescript included files

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -97,4 +97,10 @@
   "files": [
     "src/types/express.d.ts"
   ],
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
